--- a/css/styles.css
+++ b/css/styles.css
@@ -139,6 +139,7 @@ a {
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
+    
 }
 .hiro-wrap {
     margin: 188px 292px 472px 472px;
@@ -178,6 +179,10 @@ a {
 }
 .hiro {
     background: #2e2f42;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 .visually-hidden {
@@ -244,7 +249,8 @@ background-color: #F4F4FD
     margin-bottom: 72px;
 }
 .team-list {
-    border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 6px rgba, 0px 1px 1px rgba, 0px 2px 1px rgba;
+    border-radius: 0px 0px 4px 4px,
 }
 .name-post {
     padding: 32px 0;
@@ -253,6 +259,35 @@ background-color: #F4F4FD
 background-color: #FFFFFF;
 border-radius: 0px 0px 4px 4px;
 }
+.our-team-item {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+}
+
+.our-team-item-icons {
+    width: 40px;
+    height: 40px;
+}
+
+.team-link {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.team-link:hover {
+    background-color: #404bbf;
+}
+
+.team-link:focus {
+    background-color: #404bbf;
+}
+
 .subtitle-div {
     padding: 32px 0;
 }
