--- a/css/styles.css
+++ b/css/styles.css
@@ -133,7 +133,6 @@ a {
 
 .hiro {
     padding: 188px 0;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/Dark-bg.jpeg); 
     max-width: 1440px;
 }
 .container {
@@ -172,7 +171,7 @@ a {
     display: block;
     min-width: 169px;
     height: 56px;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   
     
 }
 .hiro-btn-main:hover {
@@ -212,6 +211,17 @@ a {
 .caracteristic-list {
 display: flex;
 gap: 24px;
+}
+
+.conteiner-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+    margin-bottom: 8px;
 }
 
 .caracteristic-subtitle {
