--- a/css/styles.css
+++ b/css/styles.css
@@ -358,7 +358,11 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 
 .portfolio-item {
     width: calc((100% - 48px) / 3);
-    box-shadow: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item .transition {
+    box-shadow: 250ms;
+    cubic-bezier: (0.4, 0, 0.2, 1);
 }
 
 .portfolio-item:hover {
@@ -382,7 +386,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     width: 100%;
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
+
 }
 
 .portfolio-item-div {
