--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@ a {
     padding-top: 24;
     padding-bottom: 32;
     border-bottom: 1px solid #e7e9fc;
-   
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-nav {
@@ -83,6 +83,8 @@ a {
     letter-spacing: 0.02em;
     color: #2e2f42;
     padding: 24px 0;
+    position: relative;
+    color: #404bbf;
     
 }
 
@@ -358,11 +360,6 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 
 .portfolio-item {
     width: calc((100% - 48px) / 3);
-}
-
-.portfolio-item .transition {
-    box-shadow: 250ms;
-    cubic-bezier: (0.4, 0, 0.2, 1);
 }
 
 .portfolio-item:hover {
