--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,7 @@ a {
     padding: 24px 0;
     position: relative;
     color: #404bbf;
+
     
 }
 
@@ -113,6 +114,17 @@ a {
    
         padding: 24px 0;
        
+}
+
+.header-menu-item::after {
+    content: '';
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
 }
 .header-menu-item-item {
     display: flex;
@@ -416,6 +428,11 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 .footer {
 background: #2e2f42;
 padding: 100px 0
+}
+
+.container-footer {
+    display: flex;
+    align-items: baseline;
 }
 .footer-logo {
 font-family: "Raleway", sans-serif;
