--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,8 @@ a {
     padding: 24px 0;
     position: relative;
     color: #404bbf;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 
     
 }
@@ -115,17 +117,22 @@ a {
         padding: 24px 0;
        
 }
+.current{
+position: relative;
+color:#404BBF;
 
-.header-menu-item::after {
-    content: '';
-    width: 100%;
-    position: absolute;
-    left: 0;
-    bottom: -1px;
-    height: 4px;
-    background-color: #404bbf;
-    border-radius: 2px;
 }
+.current::after{
+    content: '';
+        width: 100%;
+        position: absolute;
+        left: 0;
+        bottom: -1px;
+        height: 4px;
+        background-color: #404bbf;
+        border-radius: 2px;
+}
+
 .header-menu-item-item {
     display: flex;
     gap: 40px;
