--- a/css/styles.css
+++ b/css/styles.css
@@ -443,7 +443,7 @@ padding: 100px 0
 }
 .footer-div {
     margin-right: 120px;
-    
+
 }
 .footer-logo {
 font-family: "Raleway", sans-serif;
@@ -465,4 +465,44 @@ font-family: "Raleway", sans-serif;
 }
 .header-logo-white {
     color: #f4f4fd;
+}
+.social-media {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+    margin-bottom: 16px;
+}
+ 
+.footer-list {
+    display: flex;
+    gap: 16px;
+}
+.footer-icons {
+    width: 40px;
+    height: 40px;
+}
+.footer-link {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.footer-link:hover {
+    background-color: #31d0aa;
+}
+.footer-link:focus {
+    background-color: #31d0aa;
+}
+
+.footer-image-icons {
+    fill: #f4f4fd;
+}
+
+.team-icons {
+    fill: #f4f4fd;
 }
