--- a/css/styles.css
+++ b/css/styles.css
@@ -491,6 +491,7 @@ font-family: "Raleway", sans-serif;
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-link:hover {
     background-color: #31d0aa;
@@ -508,4 +509,8 @@ font-family: "Raleway", sans-serif;
 }
 .container-footer {
     display:flex;
+}
+
+.div-container-footer {
+    margin-right: 120px;
 }
