--- a/css/styles.css
+++ b/css/styles.css
@@ -284,9 +284,6 @@ background-color: #F4F4FD
     margin-bottom: 72px;
 }
 .team-list {
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-        0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 2px 1px rgba(46, 47, 66, 0.08);
     border-radius: 0px 0px 4px 4px,
 }
 .name-post {
@@ -295,6 +292,10 @@ background-color: #F4F4FD
 .team-item {
 background-color: #FFFFFF;
 border-radius: 0px 0px 4px 4px;
+box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
+
 }
 .our-team-item {
     display: flex;
@@ -305,6 +306,7 @@ border-radius: 0px 0px 4px 4px;
 .our-team-item-icons {
     width: 40px;
     height: 40px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-link {
