--- a/css/styles.css
+++ b/css/styles.css
@@ -155,6 +155,7 @@ color:#404BBF;
 .hiro {
     padding: 188px 0;
     max-width: 1440px;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/img-name.jpeg);
 }
 .container {
     width: 1158px;
@@ -192,7 +193,7 @@ color:#404BBF;
     display: block;
     min-width: 169px;
     height: 56px;
-   
+background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 .hiro-btn-main:hover {
@@ -270,7 +271,7 @@ width: calc((100% - 3 * 24px) / 4);
 /*----------TEAM------------*/
 .team {
     padding: 120px 0 ;
-background-color: #F4F4FD 
+background-color: #F4F4FD;
 
 }
 .team-title{
@@ -292,9 +293,6 @@ background-color: #F4F4FD
 .team-item {
 background-color: #FFFFFF;
 border-radius: 0px 0px 4px 4px;
-box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16),
-    0px 2px 1px rgba(46, 47, 66, 0.08);
 
 }
 .our-team-item {
@@ -306,7 +304,6 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
 .our-team-item-icons {
     width: 40px;
     height: 40px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-link {
@@ -317,6 +314,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-link:hover {
