--- a/css/styles.css
+++ b/css/styles.css
@@ -155,7 +155,7 @@ color:#404BBF;
 .hiro {
     padding: 188px 0;
     max-width: 1440px;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/Dark-bg.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/Darkbg.jpg);
 }
 .container {
     width: 1158px;
@@ -193,7 +193,7 @@ color:#404BBF;
     display: block;
     min-width: 169px;
     height: 56px;
-    background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hiro-btn-main:hover {
     background-color: #404BBF;
