--- a/css/styles.css
+++ b/css/styles.css
@@ -77,18 +77,14 @@ a {
 }
 
 .header-menu-link {
-    font-weight: 500;
+    font-weight: 400;
     font-size: 16px;
     line-height: 150%;
     letter-spacing: 0.02em;
     color: #2e2f42;
     padding: 24px 0;
     position: relative;
-    color: #404bbf;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-
-    
 }
 
 .header-menu-link-contact {
@@ -113,8 +109,7 @@ a {
         
 }
 .header-menu-item {
-   
-        padding: 24px 0;
+
        
 }
 .current{
@@ -136,7 +131,6 @@ color:#404BBF;
 .header-menu-item-item {
     display: flex;
     gap: 40px;
-    padding: 24px 0;
 }
 
 .header-menu-link-contact:hover {
@@ -175,6 +169,9 @@ color:#404BBF;
     text-align: center;
     color: #fff;
     max-width: 496px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 48px;
 }
 .hiro-btn-main {
     font-family: "Roboto", sans-serif;
@@ -193,6 +190,7 @@ color:#404BBF;
     min-width: 169px;
     height: 56px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    margin: 0 auto;
 }
 .hiro-btn-main:hover {
     background-color: #404BBF;
@@ -354,6 +352,7 @@ img {
     letter-spacing: 0.02em;
     text-align: center;
     color: #434455;
+    margin-bottom: 8px;
 }
 /*--------------portfolio-------------*/
 .portfolio {
@@ -374,10 +373,6 @@ img {
 display: flex;
 flex-wrap: wrap;
 gap: 48px 24px;
-}
-
-.portfolio-list:hover {
-box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-item {
@@ -471,7 +466,8 @@ font-family: "Raleway", sans-serif;
     font-size: 16px;
     line-height: 150%;
     letter-spacing: 0.02em;
-    color: #8b8b92;
+    color: #f4f4fd;
+    max-width: 264px;
 }
 .header-logo-white {
     color: #f4f4fd;
